fix: fetch join 으로 N+1 개선, Product Type 별로 반환되도록 개선